--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@ Frogmorton/imagesRaw/*.png
 Frogmorton/XML/*.xml
 imagesEons/*/*/*
 Output/*/*/*
-setEons/*/*
+setEons/*.xml
+setEons/*.xml.old
 Temp/*.png
 
 macros_copy.xlsm
