Add possibility to process only selected rows

--- a/configuration.default.yaml
+++ b/configuration.default.yaml
@@ -17,6 +17,9 @@ octgn_destination_path: C:\Google Drive\OCTGN\
 # or update only the cards, changed since the previous script run (false)
 from_scratch: true
 
+# Process only "selected" rows
+selected_only: false
+
 # Number of parallel processes to use ("default" means "cpu_count() - 1")
 parallelism: default
 
