--- a/configuration.default.yaml
+++ b/configuration.default.yaml
@@ -38,6 +38,9 @@ set_ids:
 # Creating set.xml files for OCTGN (true or false)
 octgn_set_xml: true
 
+# Creating .o8d files for OCTGN (true or false)
+octgn_o8d: true
+
 # Creating CSV files for RingsDB (true or false)
 ringsdb_csv: true
 
