--- a/configuration.default.yaml
+++ b/configuration.default.yaml
@@ -10,8 +10,17 @@ gimp_console_path: C:\Program Files\GIMP 2\bin\gimp-console-2.10.exe
 # Path to ImageMagick executable
 magick_path: C:\Program Files\ImageMagick-7.0.10-Q16-HDRI\magick.exe
 
-# Path to OCTGN destination folder (may be empty)
-octgn_destination_path: C:\Google Drive\OCTGN\
+# Path to OCTGN set.xml destination folder (may be empty)
+octgn_set_xml_destination_path: C:\Google Drive\OCTGN Files\Set Folders
+
+# Path to OCTGN set.xml scratch destination folder (may be empty)
+octgn_set_xml_scratch_destination_path: C:\Google Drive\OCTGN Files\Scratch Set Folders
+
+# Path to OCTGN .o8d destination folder (may be empty)
+octgn_o8d_destination_path: C:\Google Drive\OCTGN Files\Encounter Decks
+
+# Path to OCTGN .o8d scratch destination folder (may be empty)
+octgn_o8d_scratch_destination_path: C:\Google Drive\OCTGN Files\Scratch Encounter Decks
 
 # Whether to reprocess all cards (true)
 # or update only the cards, changed since the previous script run (false)
