Improve error handling; add Discord webhook

--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,8 @@ setOCTGN/*.xml
 setOCTGN/*.xml.old
 Temp/*/*
 
-configuration*.yaml
+configuration.yaml
+discord.yaml
 sanity_check.txt
 setGenerator.seproject
 USWebCoatedSWOP.icc
