--- a/configuration.default.yaml
+++ b/configuration.default.yaml
@@ -53,86 +53,62 @@ hallofbeorn_json: true
 # List of image outputs
 outputs:
   English:
-    - db
-    - octgn
+#    - db
+#    - octgn
 #    - pdf_a4
 #    - pdf_letter
-#    - makeplayingcards_zip
-#    - makeplayingcards_7z
-#    - drivethrucards_zip
-#    - drivethrucards_7z
-#    - mbprint_zip
-#    - mbprint_7z
 #    - mbprint_pdf
-#    - generic_png_zip
+#    - mbprint_7z
+#    - makeplayingcards_7z
 #    - generic_png_7z
+#    - drivethrucards_7z
   German:
 #    - db
 #    - octgn
 #    - pdf_a4
 #    - pdf_letter
-#    - makeplayingcards_zip
-#    - makeplayingcards_7z
-#    - drivethrucards_zip
-#    - drivethrucards_7z
-#    - mbprint_zip
-#    - mbprint_7z
 #    - mbprint_pdf
-#    - generic_png_zip
+#    - mbprint_7z
+#    - makeplayingcards_7z
 #    - generic_png_7z
+#    - drivethrucards_7z
   Spanish:
 #    - db
 #    - octgn
 #    - pdf_a4
 #    - pdf_letter
-#    - makeplayingcards_zip
-#    - makeplayingcards_7z
-#    - drivethrucards_zip
-#    - drivethrucards_7z
-#    - mbprint_zip
-#    - mbprint_7z
 #    - mbprint_pdf
-#    - generic_png_zip
+#    - mbprint_7z
+#    - makeplayingcards_7z
 #    - generic_png_7z
+#    - drivethrucards_7z
   French:
 #    - db
 #    - octgn
 #    - pdf_a4
 #    - pdf_letter
-#    - makeplayingcards_zip
-#    - makeplayingcards_7z
-#    - drivethrucards_zip
-#    - drivethrucards_7z
-#    - mbprint_zip
-#    - mbprint_7z
 #    - mbprint_pdf
-#    - generic_png_zip
+#    - mbprint_7z
+#    - makeplayingcards_7z
 #    - generic_png_7z
+#    - drivethrucards_7z
   Polish:
 #    - db
 #    - octgn
 #    - pdf_a4
 #    - pdf_letter
-#    - makeplayingcards_zip
-#    - makeplayingcards_7z
-#    - drivethrucards_zip
-#    - drivethrucards_7z
-#    - mbprint_zip
-#    - mbprint_7z
 #    - mbprint_pdf
-#    - generic_png_zip
+#    - mbprint_7z
+#    - makeplayingcards_7z
 #    - generic_png_7z
+#    - drivethrucards_7z
   Italian:
 #    - db
 #    - octgn
 #    - pdf_a4
 #    - pdf_letter
-#    - makeplayingcards_zip
-#    - makeplayingcards_7z
-#    - drivethrucards_zip
-#    - drivethrucards_7z
-#    - mbprint_zip
-#    - mbprint_7z
 #    - mbprint_pdf
-#    - generic_png_zip
+#    - mbprint_7z
+#    - makeplayingcards_7z
 #    - generic_png_7z
+#    - drivethrucards_7z
