Update script outputs

--- a/configuration.default.yaml
+++ b/configuration.default.yaml
@@ -57,58 +57,58 @@ outputs:
 #    - octgn
 #    - pdf_a4
 #    - pdf_letter
-#    - mbprint_pdf
 #    - mbprint_7z
+#    - mbprint_pdf_7z
 #    - makeplayingcards_7z
-#    - generic_png_7z
+#    - genericpng_7z
 #    - drivethrucards_7z
   German:
 #    - db
 #    - octgn
 #    - pdf_a4
 #    - pdf_letter
-#    - mbprint_pdf
 #    - mbprint_7z
+#    - mbprint_pdf_7z
 #    - makeplayingcards_7z
-#    - generic_png_7z
+#    - genericpng_7z
 #    - drivethrucards_7z
   Spanish:
 #    - db
 #    - octgn
 #    - pdf_a4
 #    - pdf_letter
-#    - mbprint_pdf
 #    - mbprint_7z
+#    - mbprint_pdf_7z
 #    - makeplayingcards_7z
-#    - generic_png_7z
+#    - genericpng_7z
 #    - drivethrucards_7z
   French:
 #    - db
 #    - octgn
 #    - pdf_a4
 #    - pdf_letter
-#    - mbprint_pdf
 #    - mbprint_7z
+#    - mbprint_pdf_7z
 #    - makeplayingcards_7z
-#    - generic_png_7z
+#    - genericpng_7z
 #    - drivethrucards_7z
   Polish:
 #    - db
 #    - octgn
 #    - pdf_a4
 #    - pdf_letter
-#    - mbprint_pdf
 #    - mbprint_7z
+#    - mbprint_pdf_7z
 #    - makeplayingcards_7z
-#    - generic_png_7z
+#    - genericpng_7z
 #    - drivethrucards_7z
   Italian:
 #    - db
 #    - octgn
 #    - pdf_a4
 #    - pdf_letter
-#    - mbprint_pdf
 #    - mbprint_7z
+#    - mbprint_pdf_7z
 #    - makeplayingcards_7z
-#    - generic_png_7z
+#    - genericpng_7z
 #    - drivethrucards_7z
