--- a/configuration.default.yaml
+++ b/configuration.default.yaml
@@ -38,6 +38,10 @@ set_ids:
 #  - all_scratch  # all scratch sets
 #  - 8a3273ca-1ccd-4e07-913b-766fcc49fe6f  # ALeP - Children of Eorl
 
+# List of set IDs to ignore
+ignore_set_ids:
+#  - 8a3273ca-1ccd-4e07-913b-766fcc49fe6f  # ALeP - Children of Eorl
+
 # Creating set.xml files for OCTGN (true or false)
 octgn_set_xml: true
 
