--- a/configuration.default.yaml
+++ b/configuration.default.yaml
@@ -29,6 +29,9 @@ reprocess_all: true
 # Process only "selected" rows (true or false)
 selected_only: false
 
+# Stop processing if there are no spreadsheet changes (true or false)
+exit_if_no_spreadsheet_changes: false
+
 # Number of parallel processes to use ("default" means "cpu_count() - 1")
 parallelism: default
 
