--- a/configuration.default.yaml
+++ b/configuration.default.yaml
@@ -68,6 +68,8 @@ outputs:
 #    - mbprint_pdf_7z
 #    - makeplayingcards_7z
 #    - genericpng_7z
+#    - genericpng_pdf_a4_7z
+#    - genericpng_pdf_letter_7z
 #    - drivethrucards_7z
   German:
 #    - db
@@ -78,6 +80,8 @@ outputs:
 #    - mbprint_pdf_7z
 #    - makeplayingcards_7z
 #    - genericpng_7z
+#    - genericpng_pdf_a4_7z
+#    - genericpng_pdf_letter_7z
 #    - drivethrucards_7z
   Spanish:
 #    - db
@@ -88,6 +92,8 @@ outputs:
 #    - mbprint_pdf_7z
 #    - makeplayingcards_7z
 #    - genericpng_7z
+#    - genericpng_pdf_a4_7z
+#    - genericpng_pdf_letter_7z
 #    - drivethrucards_7z
   French:
 #    - db
@@ -98,6 +104,8 @@ outputs:
 #    - mbprint_pdf_7z
 #    - makeplayingcards_7z
 #    - genericpng_7z
+#    - genericpng_pdf_a4_7z
+#    - genericpng_pdf_letter_7z
 #    - drivethrucards_7z
   Polish:
 #    - db
@@ -108,6 +116,8 @@ outputs:
 #    - mbprint_pdf_7z
 #    - makeplayingcards_7z
 #    - genericpng_7z
+#    - genericpng_pdf_a4_7z
+#    - genericpng_pdf_letter_7z
 #    - drivethrucards_7z
   Italian:
 #    - db
@@ -118,4 +128,6 @@ outputs:
 #    - mbprint_pdf_7z
 #    - makeplayingcards_7z
 #    - genericpng_7z
+#    - genericpng_pdf_a4_7z
+#    - genericpng_pdf_letter_7z
 #    - drivethrucards_7z
