--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ urlCache/*.cache
 configuration.yaml
 discord.yaml
 mpc_monitor.json
+ringsdb.json
 sanity_check.txt
 setGenerator.seproject
 sheets.json
