Remove icons from GitHub

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ Discord/Changes/*.json
 Download/*.json
 Frogmorton/imagesCustom/*.jpg
 Frogmorton/imagesCustom/*.png
+Frogmorton/imagesIcons/*.png
 Frogmorton/imagesRaw/*.jpg
 Frogmorton/imagesRaw/*.png
 Frogmorton/XML/*.xml
