--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ configuration.yaml
 discord.yaml
 mpc_monitor.json
 ringsdb.json
+ringsdb_cookies.json
 sanity_check.txt
 setGenerator.seproject
 sheets.json
