1. Add French database to configuration.  2. Create a file when SE script finished.

--- a/configuration.default.yaml
+++ b/configuration.default.yaml
@@ -57,6 +57,9 @@ ringsdb_csv: true
 # Creating JSON files for Hall of Beorn (true or false)
 hallofbeorn_json: true
 
+# Creating CSV files for the French database sda.cgbuilder.fr (true or false)
+frenchdb_csv: false
+
 # Creating CSV files for the Spanish database susurrosdelbosqueviejo.com (true or false)
 spanishdb_csv: false
 
