--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 __pycache__/
 Discord/*.json
 Discord/Changes/*.json
+Discord/Images/*/*
 Download/*.json
 Frogmorton/imagesCustom/*.jpg
 Frogmorton/imagesCustom/*.png
