--- a/configuration.default.yaml
+++ b/configuration.default.yaml
@@ -11,25 +11,25 @@ gimp_console_path: C:\Program Files\GIMP 2\bin\gimp-console-2.10.exe
 magick_path: C:\Program Files\ImageMagick-7.0.10-Q16-HDRI\magick.exe
 
 # Path to OCTGN set.xml destination folder (may be empty)
-octgn_set_xml_destination_path: C:\Google Drive\Playtesting\OCTGN Files\Set Folders
+octgn_set_xml_destination_path: 
 
 # Path to OCTGN set.xml scratch destination folder (may be empty)
-octgn_set_xml_scratch_destination_path: C:\Google Drive\Playtesting\OCTGN Files\Scratch Set Folders
+octgn_set_xml_scratch_destination_path: 
 
 # Path to OCTGN .o8d destination folder (may be empty)
-octgn_o8d_destination_path: C:\Google Drive\Playtesting\OCTGN Files\Encounter Decks
+octgn_o8d_destination_path: 
 
 # Path to OCTGN .o8d scratch destination folder (may be empty)
-octgn_o8d_scratch_destination_path: C:\Google Drive\Playtesting\OCTGN Files\Scratch Encounter Decks
+octgn_o8d_scratch_destination_path: 
 
 # Path to OCTGN image destination folder (may be empty)
-octgn_image_destination_path: C:\Google Drive\Playtesting\OCTGN Files\ImageDatabase
+octgn_image_destination_path: 
 
 # Path to DB destination folder (may be empty)
-db_destination_path: C:\Google Drive\RenderedImages
+db_destination_path: 
 
-# Path to timestamp folder (may be empty)
-timestamp_path: C:\Google Drive\Timestamp
+# Path to remote logs folder (may be empty)
+remote_logs_path: 
 
 # Whether to reprocess all cards (true)
 # or update only the cards, changed since the previous script run (false)
