--- a/configuration.default.yaml
+++ b/configuration.default.yaml
@@ -10,6 +10,12 @@ gimp_console_path: C:\Program Files\GIMP 2\bin\gimp-console-2.10.exe
 # Path to ImageMagick executable
 magick_path: C:\Program Files\ImageMagick-7.0.10-Q16-HDRI\magick.exe
 
+# Path to id_rsa key to upload files to DragnCards
+dragncards_id_rsa_path: 
+
+# Path to remote logs folder (may be empty)
+remote_logs_path: 
+
 # Path to OCTGN set.xml destination folder (may be empty)
 octgn_set_xml_destination_path: 
 
@@ -28,8 +34,17 @@ octgn_image_destination_path:
 # Path to DB destination folder (may be empty)
 db_destination_path: 
 
-# Path to remote logs folder (may be empty)
-remote_logs_path: 
+# Path to TTS destination folder (may be empty)
+tts_destination_path: 
+
+# Remote DragnCards path to image folder
+dragncards_remote_image_path: webhost@dragncards.com:/var/www/dragncards.com/dragncards/frontend/public/images/cards
+
+# Remote DragnCards path to JSON folder
+dragncards_remote_json_path: webhost@dragncards.com:/var/www/dragncards.com/dragncards/frontend/src/cardDB/
+
+# Remote DragnCards path to .o8d folder
+dragncards_remote_deck_path: webhost@dragncards.com:/var/www/dragncards.com/dragncards/frontend/src/decks/
 
 # Whether to reprocess all cards (true)
 # or update only the cards, changed since the previous script run (false)
@@ -68,6 +83,9 @@ octgn_o8d: true
 # Creating CSV files for RingsDB (true or false)
 ringsdb_csv: true
 
+# Creating JSON files for DragnCards (true or false)
+dragncards_json: true
+
 # Creating JSON files for Hall of Beorn (true or false)
 hallofbeorn_json: true
 
@@ -100,6 +118,7 @@ outputs:
 #    - genericpng_pdf_a4_7z
 #    - genericpng_pdf_letter_7z
 #    - rules_pdf
+#    - tts
   German:
 #    - db
 #    - octgn
@@ -112,6 +131,7 @@ outputs:
 #    - genericpng_pdf_a4_7z
 #    - genericpng_pdf_letter_7z
 #    - rules_pdf
+#    - tts
   Spanish:
 #    - db
 #    - octgn
@@ -124,6 +144,7 @@ outputs:
 #    - genericpng_pdf_a4_7z
 #    - genericpng_pdf_letter_7z
 #    - rules_pdf
+#    - tts
   French:
 #    - db
 #    - octgn
@@ -136,6 +157,7 @@ outputs:
 #    - genericpng_pdf_a4_7z
 #    - genericpng_pdf_letter_7z
 #    - rules_pdf
+#    - tts
   Polish:
 #    - db
 #    - octgn
@@ -148,6 +170,7 @@ outputs:
 #    - genericpng_pdf_a4_7z
 #    - genericpng_pdf_letter_7z
 #    - rules_pdf
+#    - tts
   Italian:
 #    - db
 #    - octgn
@@ -160,3 +183,4 @@ outputs:
 #    - genericpng_pdf_a4_7z
 #    - genericpng_pdf_letter_7z
 #    - rules_pdf
+#    - tts
