--- a/configuration.default.yaml
+++ b/configuration.default.yaml
@@ -50,6 +50,9 @@ dragncards_remote_deck_path: /var/www/dragncards.com/dragncards/frontend/src/dec
 # or update only the cards, changed since the previous script run (false)
 reprocess_all: true
 
+# Whether to reprocess all cards even when reprocess_all=false if the previous script run didn't succeed (true or false)
+reprocess_all_on_error: true
+
 # Process only "selected" rows (true or false)
 selected_only: false
 
