Add logging to autohotkey script

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ ringsdb.json
 ringsdb_cookies.json
 sanity_check.txt
 setGenerator.seproject
+setGenerator_CREATED
 sheets.json
 USWebCoatedSWOP.icc
 *.cnt
