--- a/configuration.nightly.yaml
+++ b/configuration.nightly.yaml
@@ -2,7 +2,7 @@
 sheet_gdid: ***
 
 # Local path to the artwork folder
-artwork_path: C:\Google Drive\CardImages
+artwork_path: C:\Google Drive\A Long-extended Party\CardImages
 
 # Path to GIMP console executable
 gimp_console_path: C:\Program Files\GIMP 2\bin\gimp-console-2.10.exe
@@ -11,10 +11,10 @@ gimp_console_path: C:\Program Files\GIMP 2\bin\gimp-console-2.10.exe
 magick_path: C:\Program Files\ImageMagick-7.0.10-Q16-HDRI\magick.exe
 
 # Path to id_rsa key to upload files to DragnCards
-dragncards_id_rsa_path: 
+dragncards_id_rsa_path: id_rsa
 
 # Path to remote logs folder (may be empty)
-remote_logs_path: 
+remote_logs_path: C:\Google Drive\A Long-extended Party\Logs
 
 # Path to OCTGN set.xml destination folder (may be empty)
 octgn_set_xml_destination_path: 
@@ -29,13 +29,13 @@ octgn_o8d_destination_path:
 octgn_o8d_scratch_destination_path: 
 
 # Path to OCTGN image destination folder (may be empty)
-octgn_image_destination_path: 
+octgn_image_destination_path: C:\Google Drive\A Long-extended Party\Playtesting\OCTGN Files\ImageDatabase
 
 # Path to DB destination folder (may be empty)
-db_destination_path: 
+db_destination_path: C:\Google Drive\A Long-extended Party\RenderedImages
 
 # Path to TTS destination folder (may be empty)
-tts_destination_path: 
+tts_destination_path: C:\Google Drive\A Long-extended Party\TTS
 
 # Remote DragnCards path to image folder
 dragncards_remote_image_path: /var/www/dragncards.com/dragncards/frontend/public/images/cards/
@@ -48,7 +48,7 @@ dragncards_remote_deck_path: /var/www/dragncards.com/Lord-of-the-Rings/o8g/Decks
 
 # Whether to reprocess all cards (true)
 # or update only the cards, changed since the previous script run (false)
-reprocess_all: true
+reprocess_all: false
 
 # Whether to reprocess all cards even when reprocess_all=false if the previous script run didn't succeed (true or false)
 reprocess_all_on_error: true
@@ -65,32 +65,34 @@ parallelism: default
 # List of set IDs to work on
 set_ids:
   - all  # all non-scratch sets
-#  - all_scratch  # all scratch sets
+  - all_scratch  # all scratch sets
 #  - 8a3273ca-1ccd-4e07-913b-766fcc49fe6f  # ALeP - Children of Eorl
 
 # List of set IDs to ignore
 ignore_set_ids:
-#  - 8a3273ca-1ccd-4e07-913b-766fcc49fe6f  # ALeP - Children of Eorl
+  - 8a3273ca-1ccd-4e07-913b-766fcc49fe6f  # ALeP - Children of Eorl
+  - 806149fc-e8ca-4feb-b0ab-7874449a4c23  # AR Scratch Set
 
 # List of set IDs to copy to OCTGN image destination
 set_ids_octgn_image_destination:
 #  - all  # all non-scratch sets
 #  - 8a3273ca-1ccd-4e07-913b-766fcc49fe6f  # ALeP - Children of Eorl
+  - 17b90ca1-7e3e-4891-99da-954a7833e88e  # ALeP - The Aldburg Plot
 
 # Creating set.xml files for OCTGN (true or false)
-octgn_set_xml: true
+octgn_set_xml: false
 
 # Creating .o8d files for OCTGN and DragnCards (true or false)
 octgn_o8d: true
 
 # Creating CSV files for RingsDB (true or false)
-ringsdb_csv: true
+ringsdb_csv: false
 
 # Creating JSON files for DragnCards (true or false)
 dragncards_json: true
 
 # Creating JSON files for Hall of Beorn (true or false)
-hallofbeorn_json: true
+hallofbeorn_json: false
 
 # Creating CSV files for the French database sda.cgbuilder.fr (true or false)
 frenchdb_csv: false
@@ -99,7 +101,7 @@ frenchdb_csv: false
 spanishdb_csv: false
 
 # Uploading outputs to DragnCards
-upload_dragncards: false
+upload_dragncards: true
 
 # DragnCards hostname (username@hostname)
 dragncards_hostname: webhost@dragncards.com
@@ -116,8 +118,8 @@ ringsdb_sessionid:
 # List of image outputs
 outputs:
   English:
-#    - db
-#    - octgn
+    - db
+    - octgn
 #    - pdf_a4
 #    - pdf_letter
 #    - mbprint_7z
@@ -127,7 +129,7 @@ outputs:
 #    - genericpng_pdf_a4_7z
 #    - genericpng_pdf_letter_7z
 #    - rules_pdf
-#    - tts
+    - tts
   German:
 #    - db
 #    - octgn
