--- a/configuration.cron.yaml
+++ b/configuration.cron.yaml
@@ -2,7 +2,7 @@
 sheet_gdid: ***
 
 # Local path to the artwork folder
-artwork_path: C:\Google Drive\CardImages
+artwork_path: /home/user/Drive/A Long-extended Party/CardImages
 
 # Path to GIMP console executable
 gimp_console_path: C:\Program Files\GIMP 2\bin\gimp-console-2.10.exe
@@ -11,31 +11,31 @@ gimp_console_path: C:\Program Files\GIMP 2\bin\gimp-console-2.10.exe
 magick_path: C:\Program Files\ImageMagick-7.0.10-Q16-HDRI\magick.exe
 
 # Path to id_rsa key to upload files to DragnCards
-dragncards_id_rsa_path: 
+dragncards_id_rsa_path:
 
 # Path to remote logs folder (may be empty)
-remote_logs_path: 
+remote_logs_path: /home/user/Drive/A Long-extended Party/Logs
 
 # Path to OCTGN set.xml destination folder (may be empty)
-octgn_set_xml_destination_path: 
+octgn_set_xml_destination_path: /home/user/Drive/A Long-extended Party/Playtesting/OCTGN Files/Set Folders
 
 # Path to OCTGN set.xml scratch destination folder (may be empty)
-octgn_set_xml_scratch_destination_path: 
+octgn_set_xml_scratch_destination_path: /home/user/Drive/A Long-extended Party/Playtesting/OCTGN Files/Scratch Set Folders
 
 # Path to OCTGN .o8d destination folder (may be empty)
-octgn_o8d_destination_path: 
+octgn_o8d_destination_path: /home/user/Drive/A Long-extended Party/Playtesting/OCTGN Files/Encounter Decks
 
 # Path to OCTGN .o8d scratch destination folder (may be empty)
-octgn_o8d_scratch_destination_path: 
+octgn_o8d_scratch_destination_path: /home/user/Drive/A Long-extended Party/Playtesting/OCTGN Files/Scratch Encounter Decks
 
 # Path to OCTGN image destination folder (may be empty)
-octgn_image_destination_path: 
+octgn_image_destination_path:
 
 # Path to DB destination folder (may be empty)
-db_destination_path: 
+db_destination_path:
 
 # Path to TTS destination folder (may be empty)
-tts_destination_path: 
+tts_destination_path:
 
 # Remote DragnCards path to image folder
 dragncards_remote_image_path: /var/www/dragncards.com/dragncards/frontend/public/images/cards/
@@ -57,7 +57,7 @@ reprocess_all_on_error: true
 selected_only: false
 
 # Stop processing if there are no spreadsheet changes (true or false)
-exit_if_no_spreadsheet_changes: false
+exit_if_no_spreadsheet_changes: true
 
 # Number of parallel processes to use ("default" means "cpu_count() - 1", but not more than 4)
 parallelism: default
@@ -65,12 +65,13 @@ parallelism: default
 # List of set IDs to work on
 set_ids:
   - all  # all non-scratch sets
-#  - all_scratch  # all scratch sets
+  - all_scratch  # all scratch sets
 #  - 8a3273ca-1ccd-4e07-913b-766fcc49fe6f  # ALeP - Children of Eorl
 
 # List of set IDs to ignore
 ignore_set_ids:
-#  - 8a3273ca-1ccd-4e07-913b-766fcc49fe6f  # ALeP - Children of Eorl
+  - 8a3273ca-1ccd-4e07-913b-766fcc49fe6f  # ALeP - Children of Eorl
+  - 806149fc-e8ca-4feb-b0ab-7874449a4c23  # AR Scratch Set
 
 # List of set IDs to copy to OCTGN image destination
 set_ids_octgn_image_destination:
@@ -87,10 +88,10 @@ octgn_o8d: true
 ringsdb_csv: true
 
 # Creating JSON files for DragnCards (true or false)
-dragncards_json: true
+dragncards_json: false
 
 # Creating JSON files for Hall of Beorn (true or false)
-hallofbeorn_json: true
+hallofbeorn_json: false
 
 # Creating CSV files for the French database sda.cgbuilder.fr (true or false)
 frenchdb_csv: false
@@ -105,13 +106,13 @@ upload_dragncards: false
 dragncards_hostname: webhost@dragncards.com
 
 # Updating test.ringsdb.com
-update_ringsdb: false
+update_ringsdb: true
 
 # test.ringsdb.com URL
 ringsdb_url: https://test.ringsdb.com
 
 # test.ringsdb.com session id: <PHPSESSID>|<REMEMBERME>
-ringsdb_sessionid: 
+ringsdb_sessionid: ***
 
 # List of image outputs
 outputs:
