Update readme and script examples

--- a/run_setup.bat.example
+++ b/run_setup.bat.example
@@ -3,4 +3,5 @@ if "%ERRORLEVEL%"=="1" (
   cd /D "C:\Program Files\Google\Drive\"
   start /B googledrivesync.exe
   cd /D "%~dp0"
+  timeout /t 300
 )
